--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
   "dependencies": {
     "framer-motion": "^12.23.12",
     "motion-frame": "^2.1.0",
-    "next": "15.5.0",
+    "next": "^15.4.0",
     "react": "19.1.0",
     "react-dom": "19.1.0"
   },
